feat #add proxy demo

--- a/interview/code/observe-demo/index.html
+++ b/interview/code/observe-demo/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Observe Dmeo</title>
+  <title>响应式Dmeo</title>
 </head>
 <body>
-  <script src="./observe.js"></script>
+  <h2>响应式Dmeo</h2>
+  <!-- <script src="./observe.js"></script> -->
+  <!-- <script src="./proxy-demo.js"></script> -->
+  <script src="./proxy-observe.js"></script>
 </body>
 </html>
